RadioSelectInputWidget, CheckboxMultiselectInputWidget: Fix spacing between options in PHP (Apex theme)
Follow-up to badb35947c222850ffe801a0b480e83c0f6f5818.

--- a/src/themes/apex/widgets.less
+++ b/src/themes/apex/widgets.less
@@ -171,7 +171,7 @@
 
 .theme-oo-ui-checkboxMultiselectInputWidget () {
 	.oo-ui-fieldLayout {
-		margin-bottom: 0;
+		margin-top: 0;
 
 		.oo-ui-fieldLayout-body {
 			padding: @padding-vertical-label 0;
@@ -931,7 +931,7 @@
 
 .theme-oo-ui-radioSelectInputWidget () {
 	.oo-ui-fieldLayout {
-		margin-bottom: 0;
+		margin-top: 0;
 
 		.oo-ui-fieldLayout-body {
 			padding: @padding-vertical-label 0;
